# cp2k-lsp-enhanced

./: .coverage  .coverage.iv-ydtpnl7da8bw80bca309.pid1748135.XhZ1VDRx.HNQIp837rWOh  .eslintrc.js  .gitignore  .pre-commit-config.yaml  <stdin>-  AGENTS.md  CHANGELOG-LSP.md  CHANGELOG.md  ENHANCEMENT_SUMMARY.md  FINAL_SUMMARY.md  GITHUB_ANALYSIS.md  LSP_IMPLEMENTATION.md  PARSER_ENHANCEMENTS.md  PLAN.md  README-LSP.md  README.ENHANCED.md  README.md  TEST_COVERAGE_NEW.md  TEST_COVERAGE_REPORT.md  coverage.xml  examples_parser_enhancements.py  index.md  input-.inp  input-project_name_test_gen.inp  jest.config.js  log.md  lsp-capabilities.json  mypy.ini  package.json  pyproject.toml
.github/: copilot-instructions.md  pull_request_template.md
.maintenance/: last-run.md
cp2k_input_tools/: agent_lsp.py  agent_operations.py  cache_invalidation.py  code_actions.py  completion.py  context_packs.py  cursor_context.py  datafile_parser.py  definition.py  dependency.py  diagnostics_api.py  docs_digest.py  domain_language.py  evaluation.py  formatter.py  generator.py  hover.py  keyword_helpers.py  linter.py  log_parser.py  ls.py  openqc_lsp_factory.py  parser.py  parser_errors.py  precomputed_index.py  preprocessor.py  rename.py  rich_diagnostics.py  schema_index.py  semantic_diagnostics.py  symbols.py  tokenizer.py  tool.py  typecheck.py  utils.py  validation_backends.py  validator.py  version_policy.py  workspace_index.py
data/: cp2k-schema-cache.json
docs/: DEVELOPMENT-REPORT-2026-03-04-CRON.md  DEVELOPMENT-REPORT-2026-03-04.md  DEVELOPMENT-REPORT-2026-03-05-CRON.md  DIAGNOSTIC_ENGINE_V1.md  LLM-WIKI-PLAN.md  agent-workflow.md  pr-checks.md  usage.md
docs_digest/: cp2k_hover_index.json  cp2k_rules.yaml  cp2k_wiki.jsonl
scripts/: format.sh  install.sh  test.sh  wiki-lint.sh  wiki_lint.py
sources/: README.md  manifest.schema.json
src/: server.ts
syntaxes/: cp2k.tmLanguage.json
tests/: completion-coverage.test.ts  completion-extended.test.ts  completion-full-coverage.test.ts  completion.test.ts  conftest.py  data-extended.test.ts  data-index.test.ts  deep-validation.test.ts  definition-coverage.test.ts  definition-extended.test.ts  definition.test.ts  diagnostics-coverage.test.ts  diagnostics-full.test.ts  diagnostics.test.ts  (+108 more)
(+237 files in other folders)
